Visual improvements and abstractions
Brought the header out of the content and made a nice gradient at the top of the screen.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,16 @@
+<div class = headerGradient >
+    <a href = "{{ "/" | relative_url }}" >
+      <img src = "{{ "/assets/images/Harbinger_250.png " | relative_url }}" style = "width:90px; float:left; margin-top:-5px;" />
+    </a> 
+    <h1> {{page.title}} </h1>
+    
+
+        
+    
+    <hr/>
+  </div>
 <header class="site-header">
+
   <div class="wrapper">
  
   </div>
