--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -2,8 +2,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:#222;
     color:gold; 
+    
 }
-
+div.headerGradient {
+    background-image: linear-gradient(#000, #222);
+    margin:-8px;
+    padding-top:20px;
+    min-height:90px;
+  }
 
 tr, td, th {
     margin: 0;
@@ -22,6 +28,10 @@ h1
 h2 
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
+}
+h4 
+{
+    margin-left:10%;
 }
 a {
     color:rgb(255, 236, 128)
@@ -60,10 +70,13 @@ td {
     margin:0px;
     
 }
-
+td.number {
+    text-align: center;
+}
 tr:nth-child(even){
      background:#331; /**/
 }
 tr:nth-child(odd){
      background:#441; /**/
 }
+
