--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -4,12 +4,26 @@ body {
     color:gold; 
     
 }
+div.CentralBlock
+{
+    margin-top:-60px;
+    width:600px;
+    margin-left:auto;
+    margin-right:auto;
+}
+div.wrapper {
+    background-image: url('../images/HarbingerBack.png');
+    background-size: contain;
+    background-repeat:no-repeat;        
+    background-position:center top;
+}
 div.headerGradient {
-    background-image: linear-gradient(#000, #222);
+    background-image: linear-gradient(rgba(0,0,0,1), rgba(34, 34, 34, 0));
     margin:-8px;
     padding-top:20px;
     min-height:90px;
-  }
+
+}
 
 tr, td, th {
     margin: 0;
