Initial HeadtoHead implementation
content update for July, first run of the July figures :)
Includes searching for head-to-head. No "1v1 stars" bonus
includes navbar, footer, and shiny new styles. rounded borders! so tasty.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,16 +2,29 @@
     <a href = "{{ "/" | relative_url }}" >
       <img src = "{{ "/assets/images/Harbinger_250.png " | relative_url }}" style = "width:90px; float:left; margin-top:-5px;" />
     </a> 
-    <h1> {{page.title}} </h1>
+    <div class = headerGradient  >
+        
+      <div class = "navBar">
+        <ul class = navbarList >
+          <li> <a class = "navBar" href = "/MonthlyScores/"> Monthly Scores </a></li>
+          <li> <a class = "navBar" href = "/StarQuality/"> Star Quality </a> </li>
+          <li> <a class = "navBar" href = "/Overachievers/"> Overachievers </a> </li>
+          <li> <a class = "navBar" href = "/HeadToHeads/"> Head to Head </a> </li> 
+        </ul>
+      </div>
+    </div>
     
-
+    
+    
         
     
-    <hr/>
+    
   </div>
 <header class="site-header">
 
   <div class="wrapper">
- 
+    
+   
+  
   </div>
 </header>
