--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -11,12 +11,42 @@ div.CentralBlock
     margin-left:auto;
     margin-right:auto;
 }
-div.wrapper {
+.HarbingerBack 
+{
     background-image: url('../images/HarbingerBack.png');
     background-size: contain;
     background-repeat:no-repeat;        
     background-position:center top;
+
 }
+
+div.wrapper {
+    
+}
+.navbarList
+{
+    display: table;
+    margin-left:auto;
+    margin-right:auto;
+    
+    padding:0px;
+
+}
+
+.navbarList li {
+    list-style-type: none;
+    border-radius: 5px 15px;
+    
+    display:inline;
+    border:1px solid rgb(255, 236, 128);
+    margin-left:20px;
+    margin-right:20px;
+    padding:7px;
+    
+    
+    text-align: center;
+}
+
 div.headerGradient {
     background-image: linear-gradient(rgba(0,0,0,1), rgba(34, 34, 34, 0));
     margin:-8px;
@@ -24,7 +54,16 @@ div.headerGradient {
     min-height:90px;
 
 }
+div.footerGradient {
+    background-image: linear-gradient(rgba(34,34,34,0), rgba(0, 0, 0, 1));
+    margin:-8px;
+    padding-top:20px;
+    min-height:40px;
+    padding-left:5px;
+    font-size: 8pt;
+    color:rgb(255, 236, 128);
 
+}
 tr, td, th {
     margin: 0;
     padding: 0;
@@ -50,6 +89,26 @@ h4
 a {
     color:rgb(255, 236, 128)
 }
+
+
+
+.h2hContent h1 {
+    padding:0px;
+    font-size:18pt;
+    margin:0px;
+    min-height:0px;
+    
+}
+.h2hContent h2 {
+    padding:0px;
+    font-size:14pt;
+    margin:0px;
+    min-height:0px;
+}
+a.navBar
+{color:rgb(255, 236, 128); text-decoration:none;}
+a.navBar:visited
+{color:rgb(255, 236, 128); text-decoration:none;}
 
 a:visited
 {color:rgb(161, 137, 0)}
@@ -80,19 +139,29 @@ table {
     color: Silver;
     margin-left:auto;
     margin-right:auto;
-    
     border-spacing: 0;
-    
-    border-radius:20px;
+    border-radius:5px 25px;
     -moz-border-radius:6px;
     overflow: hidden;
 }
 hr { 
     color:gold;
     background-color:gold;
+    
     border:0px;
     border-top:1px solid gold;
 }
+
+hr.pageBuffer
+{
+    margin-top:60px;
+}
+table.ScoreTable
+{
+    margin-bottom:60px;
+    
+}
+
 th {
     
     background: #331;
