--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
         
       <div class = "navBar">
         <ul class = navbarList >
-          <li> <a class = "navBar" href = "/MonthlyScores/"> Monthly Scores </a></li>
-          <li> <a class = "navBar" href = "/StarQuality/"> Star Quality </a> </li>
-          <li> <a class = "navBar" href = "/Overachievers/"> Overachievers </a> </li>
-          <li> <a class = "navBar" href = "/HeadToHeads/"> Head to Head </a> </li> 
+          <li> <a class = "navBar" href = "/MonthlyScores"> Monthly Scores </a></li>
+          <li> <a class = "navBar" href = "/StarQuality"> Star Quality </a> </li>
+          <li> <a class = "navBar" href = "/Overachievers"> Overachievers </a> </li>
+          <li> <a class = "navBar" href = "/HeadToHeads"> Head to Head </a> </li> 
         </ul>
       </div>
     </div>
