Site changes to include an "About" page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,7 @@
     </a> 
     <div class = headerGradient  >
         
-      <div class = "navBar">
-        <ul class = navbarList >
-          <li> <a class = "navBar" href = "/MonthlyScores"> Monthly Scores </a></li>
-          <li> <a class = "navBar" href = "/StarQuality"> Star Quality </a> </li>
-          <li> <a class = "navBar" href = "/Overachievers"> Overachievers </a> </li>
-          <li> <a class = "navBar" href = "/HeadToHeads"> Head to Head </a> </li> 
-        </ul>
-      </div>
+      {%- include navbar.html -%}
     </div>
     
     
