CSS changes - incomplete

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class = headerGradient >
     <a href = "{{ "/" | relative_url }}" >
-      <img src = "{{ "/assets/images/Harbinger_250.png " | relative_url }}" style = "width:90px; float:left; margin-top:-5px;" />
+      <img src = "{{ "/assets/images/LSLogo.png " | relative_url }}" style = "width:90px; float:left; margin-top:-5px;" />
     </a> 
     <div class = headerGradient  >
         
