Bootstrap auto scaling for main page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,10 @@
-      <div class = "navBar">
-        <ul class = navbarList >
-          <li> <a class = "navBar" href = "/MonthlyScores"> Monthly Scores </a></li>
-          <li> <a class = "navBar" href = "/StarQuality"> Star Quality </a> </li>
-          <li> <a class = "navBar" href = "/Overachievers"> Overachievers </a> </li>
-          <li> <a class = "navBar" href = "/HeadToHeads"> Head to Head </a> </li> 
-          <li> <a class = "navBar" href = "/About"> About </a> </li> 
-        </ul>
+      <div class = "row navBar container-fluid">
+        
+        
+        <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/MonthlyScores"> Monthly Scores </a> </div>
+        <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/StarQuality"> Star Quality </a>  </div>
+        <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/Overachievers"> Overachievers </a> </div>
+        <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/HeadToHeads"> Head to Head </a> </div>
+        <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/About"> About </a>  </div>
+        
       </div>
