--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class = footerGradient  >
+<div class = "footerGradient col-sm-12"  >
 Last Updated: 2019-08-07<br/>
 No rights are granted with regard to reuse of the content on this site, beyond those contained and relating to the 3rd party modules therein.<br/>
 For questions, ping me an email :) 
