--- a/assets/css/laserCard.css
+++ b/assets/css/laserCard.css
@@ -2,8 +2,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:#222;
     color:gold; 
-    
-    
 }
 div.headerGradient {
     background-image: linear-gradient(#000, #222);
@@ -17,8 +15,8 @@ div.headerGradient {
 
 div.LaserCardWrapper
 {
-    width:504px;
-    height:144px;
+    
+    
     border:2px solid gold;
     border-radius: 10px 30px;
     padding-left:25px;
@@ -30,61 +28,43 @@ div.LaserCardWrapper
     margin-top:15px;
     background-color:#111;
 }
-.otherPlayer div.LaserCardWrapper
+div.LaserCardWrapperOther
 {
     padding:0px;
-    
     border:1px solid black;
     color: black;
     background-color:#333;
-    margin-left:25px;
-    margin-right:25px;
-    padding:5px;
+
 
 }
-.goldPlayer div.LaserCardWrapper
+div.LaserCardWrapperGold
 {
-    
     border:2px solid gold;
     color:gold;
+    color:rgb(143, 121, 0);
+
 }
-.silverPlayer div.LaserCardWrapper
+div.LaserCardWrapperSilver
 {
     border:2px solid silver;
- 	color:silver;
+     color:silver;
+     color:rgb(119, 119, 119);
 }
-.bronzePlayer div.LaserCardWrapper
+div.LaserCardWrapperBronze
 {
     border:2px solid rgb(180, 100, 40);
     color:rgb(180, 100, 40);
-       
-}
-div.LaserCardNames 
-{
-    float:right;
-    padding-right:5px;
-}
-div.LaserCardBlock {
-    margin-top:20px;
-    width:50%;
-    float:left;
-    
-
-}
-
-.goldPlayer div.LaserCardBlock {
-	color:rgb(143, 121, 0);
-}
-.silverPlayer div.LaserCardBlock {
-	color:rgb(119, 119, 119);
-}
-.bronzePlayer div.LaserCardBlock{
     color: rgb(120, 75, 30);
+}
+
+div.LaserCardBlock {
+    margin-top:10px;
+
 
 }
-div.LaserCardPadding {
-    padding-left:5px;
-    padding-right:5px;
+
+div.laserCardNames {
+    
 }
 h1 
 {
@@ -92,7 +72,7 @@ h1
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     height:auto;
     min-height:0px;
-    margin-left:10px;
+    
     padding:0px;
     margin:0px;
     
@@ -107,6 +87,12 @@ h2
 }
 h4 
 
+.LaserCardWrapperOther h1{
+    padding-top:10px;
+}
+.LaserCardWrapperOther h2{
+    padding-top:5px;
+}
 a {
     color:rgb(255, 236, 128)
 }
@@ -131,25 +117,34 @@ hr {
     margin-left:0px;
     margin-right:30px;
 }
-.goldPlayer hr 
+.LaserCardWrapperGold hr 
 {
     color:rgb(143, 121, 0);
     background-color:rgb(143, 121, 0);
     border-top:1px solid rgb(143, 121, 0);
 }
-.silverPlayer hr
+.LaserCardWrapperSilver hr
 {
     color:rgb(119, 119, 119);
     background-color:rgb(119, 119, 119);
     border-top:1px solid rgb(119, 119, 119);
 }
-.bronzePlayer hr 
+.LaserCardWrapperBronze hr 
 {
     
     color: rgb(120, 75, 30);
     background-color:rgb(120, 75, 30);
     border-top:1px solid rgb(120, 75, 30);
 }
+
+.LaserCardWrapperOther hr 
+{
+    
+    color: rgb(0, 0, 0);
+    background-color:rgb(0, 0, 0);
+    border-top:1px solid rgb(0, 0, 0);
+}
+
 
 p{margin-block-start: 0.5em;
 margin-block-end:0.5em;}
