Handling for multi-sites (LF and LS)

--- a/assets/css/CTRI_laserCard.css
+++ b/assets/css/CTRI_laserCard.css
@@ -12,7 +12,11 @@ div.headerGradient {
     min-height:90px;
   }
 
-
+img.LaserCardLogo
+{
+    width:75px;
+    height:75px;
+}
 
 
 div.LaserCardWrapper
