--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<div class = "footerGradient col-sm-12"  >
+<footer class = "footerGradient "  >
 Last Updated: 2019-08-27<br/>
 No rights are granted with regard to reuse of the content on this site, beyond those contained and relating to the 3rd party modules therein.<br/>
 For questions, ping me an email :) 
 
-</div> 
+</footer> 
