--- a/assets/css/BrandingCSS.css
+++ b/assets/css/BrandingCSS.css
@@ -23,3 +23,30 @@ div.LaserCardWrapper7-9
 {    color:limegreen; }
 .LaserCardWrapper7-9 a
 {    color:limegreen; }
+
+
+div.LaserCardWrapper7-8
+{
+    margin-left:5px;
+    margin-right:5px;
+    border:2px solid #0060c0;
+    color:white;
+    background: #103060;
+}
+.LaserCardWrapper7-8 a:visited
+{    color:yellow; }
+.LaserCardWrapper7-8 a
+{    color:yellow; }
+
+div.LaserCardWrapper7-10
+{
+    margin-left:5px;
+    margin-right:5px;
+    border:2px solid #0060c0;
+    color:white;
+    background: #103060;
+}
+.LaserCardWrapper7-10 a:visited
+{    color:yellow; }
+.LaserCardWrapper7-10 a
+{    color:yellow; }
