--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -42,14 +42,22 @@ div.headerGradient {
     min-height:90px;
 
 }
-div.footerGradient {
+footer {
+    
+    display:block;
+    position: fixed;
+    bottom: 0;
+}
+.footerGradient {
     background-image: linear-gradient(rgba(34,34,34,0), rgba(0, 0, 0, 1));
-    margin:-8px;
+    min-width:100%;
     padding-top:20px;
     min-height:40px;
     padding-left:5px;
     font-size: 8pt;
     color:rgb(255, 236, 128);
+    
+    
 
 }
 tr, td, th {
@@ -186,3 +194,8 @@ div.navBar{
     margin-left:auto;
     margin-right:auto; 
 }
+
+.fill{
+    height:100%;
+}
+
