--- a/assets/css/laserCard.css
+++ b/assets/css/laserCard.css
@@ -30,14 +30,14 @@ div.LaserCardWrapper
     font-size:8pt;
     color:gold;
     margin-top:15px;
-    background-color:#111;
+    background-color:rgba(0,0,0,.8);
 }
 div.LaserCardWrapperOther
 {
     padding:0px;
     border:1px solid black;
     color: black;
-    background-color:#333;
+    background-color:rgba(48,48,48,.8);
 
 
 }
