disabled head to heads for now

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class = headerGradient >
     <a href = "{{ "/" | relative_url }}" >
-      <img src = "/assets/images{{ page.URLPrefix | default: '' }}Logo250.png" style = "width:90px; float:left; margin-top:-5px;" />
+      <img src = "/assets/images{{ page.URLPrefix | default: '' }}logo250.png" style = "width:90px; float:left; margin-top:-5px;" />
     </a> 
     
 
