--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/MonthlyScores"> Monthly Scores </a> </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/StarQuality"> Star Quality </a>  </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/Overachievers"> Overachievers </a> </div>
-  <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/HeadToHeads"> Head to Head </a> </div>
+  <div class = "col-sm-2 navbarItem"> <!--<a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/HeadToHeads"> Head to Head </a>--> 1v1s Under Construction </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/About"> About </a>  </div>
   <div class = "col-sm-1"></div>
 </div>
