--- a/assets/css/BrandingCSS.css
+++ b/assets/css/BrandingCSS.css
@@ -44,7 +44,7 @@ div.LaserCardWrapper7-10
     margin-right:5px;
     border:2px solid #0060c0;
     color:white;
-    background: #103060;
+    background: rgba(16,38,96,0.8);
 }
 .LaserCardWrapper7-10 a:visited
 {    color:yellow; }
