Site specific CSS for index pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
   <!-- <link rel="stylesheet" href="{{ "/assets/css/LS_siteStyle.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/LS_HeadToHead.css" | relative_url }}"> -->
 
-  <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/HeadToHead.css" | relative_url }}">
-  
+  <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}"/>
+  <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}"/>
+  <link rel="stylesheet" href="{{ "/assets/css/HeadToHead.css" | relative_url }}"/>
+  <link rel="stylesheet" href="/assets/css/{{ page.URLPrefix | default: '' }}siteStyle.css"/>
 </head>
