--- a/_includes/head_card.html
+++ b/_includes/head_card.html
@@ -10,6 +10,6 @@
   <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/laserCard.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}">
-  
+  <link rel="stylesheet" href="/assets/css/{{ page.URLPrefix | default: '' }}siteStyle.css"/>
 
 </head>
