--- a/assets/css/7-8siteStyle.css
+++ b/assets/css/7-8siteStyle.css
@@ -77,3 +77,40 @@ div.LaserCardWrapperBronze
     background-color:#0060c0;
     border-top:1px solid #0060c0;
 }
+
+
+/* start of table page content */
+
+td.SmallBrightNumber{
+    color:yellow;
+}
+
+th {
+    background: #1c0d32;
+}
+
+tr:nth-child(even){
+    background:#1c0d32; /**/
+}
+tr:nth-child(odd){
+    background:#28134a; /**/
+}
+
+body {
+    color:yellow; 
+}
+
+a, a:visited
+{color:rgb(255, 255, 81)}
+a:hover
+{color:rgb(255, 255, 201)}
+
+hr { 
+    color:yellow;
+    background-color:yellow;
+    
+    border:0px;
+    border-top:1px solid yellow;
+}
+
+/* end of table page content */
