--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -34,6 +34,15 @@ div.navbarItem {
     vertical-align: center;
 }
 
+div.navbarHeader {display:inline;
+    margin:7px;
+    height:30px;
+    text-align: center;
+    vertical-align: center;
+    color: rgb(255, 236, 128);
+
+}
+
 
 div.headerGradient {
     background-image: linear-gradient(rgba(0,0,0,1), rgba(34, 34, 34, 0));
@@ -181,6 +190,16 @@ td.SmallBrightNumber{
     font-family: monospace
     
 }
+div.SmallBrightNumber
+{
+
+    vertical-align: super;
+    font-size: 6pt;
+    color:gold;
+    font-family: monospace   
+}
+
+
 tr:nth-child(even){
      background:#331; /**/
 }
@@ -219,3 +238,21 @@ main.page-content{
     margin-top:15px;
     background-color:rgba(0,0,0,.8);
 }
+
+.genericWrapperOffset 
+{
+    border-radius: 30px 10px;
+}
+
+table.AnnualTop3s{
+    border-radius:10px;
+    margin:0px; padding-left:10px;
+    font-size:8pt;
+    background-color:green;
+    
+}
+table.AnnualTop3s td {text-align: center;}
+table.AnnualTop3s td.golden {color:gold;}
+table.AnnualTop3s td.silver {color:silver;}
+table.AnnualTop3s td.bronze {color:rgb(180, 100, 40);}
+table.AnnualTop3s td.MonthHeader {color:gold; font-weight: bolder;}
