--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,10 +2,17 @@
 
 <div class = "row container-fluid">
   <div class = "col-sm-1"></div>
+  <div class = "col-sm-1 navbarHeader">2019:</div>
+  <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/LastYear"> Annual Rankings </a> </div>
+
+  <div class = "col-sm-1"></div>
+</div>
+<div class = "row container-fluid">
+  <div class = "col-sm-1"></div>
+  <div class = "col-sm-1 navbarHeader">2020:</div>
+  <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/YearToDate"> Year to date </a> </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/MonthlyScores"> Monthly Scores </a> </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/StarQuality"> Star Quality </a>  </div>
   <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/Overachievers"> Overachievers </a> </div>
-  <div class = "col-sm-2 navbarItem"> <!--<a class = "navBar" href = "{{ page.URLPrefix | default: '' }}/HeadToHeads"> Head to Head </a>--> 1v1s Under Construction </div>
-  <div class = "col-sm-2 navbarItem"> <a class = "navBar" href = "/About"> About </a>  </div>
   <div class = "col-sm-1"></div>
 </div>
