--- a/assets/css/7-9siteStyle.css
+++ b/assets/css/7-9siteStyle.css
@@ -123,3 +123,20 @@ div.SmallBrightNumber {
 }
 
 table.AnnualTop3s td.MonthHeader {color:limegreen;}
+
+
+div {
+    /*border:1px solid red; //*/
+}
+
+div.GainLossIcon
+{
+    color:black;
+    border-color:limegreen;
+    background-color:#141;
+}
+
+table.AnnualTop3s{
+    background-color:green;
+}
+
