--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -82,6 +82,8 @@ h1
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     min-height:90px;
     padding-left:10px;
+    text-align:center;
+
 }
 h2 
 {
@@ -248,7 +250,7 @@ table.AnnualTop3s{
     border-radius:10px;
     margin:0px; padding-left:10px;
     font-size:8pt;
-    background-color:green;
+    background-color:darkgoldenrod;
     
 }
 table.AnnualTop3s td {text-align: center;}
@@ -256,3 +258,28 @@ table.AnnualTop3s td.golden {color:gold;}
 table.AnnualTop3s td.silver {color:silver;}
 table.AnnualTop3s td.bronze {color:rgb(180, 100, 40);}
 table.AnnualTop3s td.MonthHeader {color:gold; font-weight: bolder;}
+
+div.GainLossIcon
+{
+    border:2px solid gold;
+    border-radius: 15px;
+    background-color:rgb(161, 137, 0);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: top;
+    height:200px;
+    background-size: 200px 100px;
+    vertical-align: bottom;
+    text-align: center;
+    padding-top:100px;
+    color:black;
+}
+div.GainLossIcon .sup 
+{
+    font-size:8pt;
+}
+div.spacer
+{
+    height:20px;
+    width:100%;
+}
