--- a/_includes/head_card.html
+++ b/_includes/head_card.html
@@ -1,15 +1,15 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--
   <link rel="stylesheet" href="{{ "/assets/css/LS_siteStyle.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/LS_laserCard.css" | relative_url }}">
 -->
-  <link rel="stylesheet" href="{{ "/assets/css/bootstrap.css" | relative_url }}"> 
-  <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/laserCard.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/bootstrap.css" | relative_url }}" /> 
+  <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}" />
+  <link rel="stylesheet" href="{{ "/assets/css/laserCard.css" | relative_url }}" />
+  <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}" />
   <link rel="stylesheet" href="/assets/css/{{ page.URLPrefix | default: '' }}siteStyle.css"/>
-
+  <script src="{{ "/assets/js/plotly-latest.min.js" | relative_url }}" ></script>
 </head>
