--- a/assets/css/7-10siteStyle.css
+++ b/assets/css/7-10siteStyle.css
@@ -77,3 +77,66 @@ div.LaserCardWrapperBronze
     background-color:#0060c0;
     border-top:1px solid #0060c0;
 }
+
+
+/* start of table page content */
+
+td.SmallBrightNumber{
+    color:yellow;
+}
+
+th {
+    background: #1c0d32;
+}
+
+tr:nth-child(even){
+    background:#1c0d32; /**/
+}
+tr:nth-child(odd){
+    background:#28134a; /**/
+}
+
+body {
+    color:yellow; 
+}
+
+a, a:visited
+{color:rgb(255, 255, 81)}
+a:hover
+{color:rgb(255, 255, 201)}
+
+hr { 
+    color:yellow;
+    background-color:yellow;
+    
+    border:0px;
+    border-top:1px solid yellow;
+}
+
+/* end of table page content */
+
+table.AnnualTop3s { 
+    border:2px solid royalblue;
+}
+div.SmallBrightNumber {
+    color:white;
+}
+
+table.AnnualTop3s td.MonthHeader {
+    color:white;}
+
+div {
+    /*border:1px solid red; //*/
+}
+
+div.GainLossIcon
+{
+    color:white;
+    border-color:#0060c0;
+    background-color:#227;
+}
+
+table.AnnualTop3s{
+    background-color:#227;
+}
+
