--- a/assets/css/7-2siteStyle.css
+++ b/assets/css/7-2siteStyle.css
@@ -113,3 +113,30 @@ hr {
 }
 
 /* end of table page content */
+
+
+table.AnnualTop3s { 
+    border:2px solid royalblue;
+}
+div.SmallBrightNumber {
+    color:white;
+}
+
+table.AnnualTop3s td.MonthHeader {
+    color:white;}
+
+div {
+    /*border:1px solid red; //*/
+}
+
+div.GainLossIcon
+{
+    color:white;
+    border-color:aqua;
+    background-color:#227;
+}
+
+table.AnnualTop3s{
+    background-color:#227;
+}
+
