Auto stash before merge of "AnnualContent" and "origin/master"
left-align on top-5

--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -74,7 +74,14 @@ tr, td, th {
     padding: 0;
     border: 0;
 }
-
+div.LaserCardNames h1
+{
+    text-align:left;
+}
+div.LaserCardNames h2
+{
+    text-align:right;
+}
 h1 
 {
     margin-left:auto;
