--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,13 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content = "{{ page.metaDescription}} " />
 
-  <!-- <link rel="stylesheet" href="{{ "/assets/css/LS_siteStyle.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/LS_HeadToHead.css" | relative_url }}"> -->
+<!--
+   <link rel="stylesheet" href="{{ "/assets/css/LS_siteStyle.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/LS_HeadToHead.css" | relative_url }}"> 
+-->
 
   <link rel="stylesheet" href="{{ "/assets/css/siteStyle.css" | relative_url }}"/>
   <link rel="stylesheet" href="{{ "/assets/css/BrandingCSS.css" | relative_url }}"/>
