Additional guidance on clickable breakdowns

--- a/assets/css/siteStyle.css
+++ b/assets/css/siteStyle.css
@@ -288,6 +288,10 @@ div.spacer
     width:100%;
 }
 
+.clickable{
+    cursor:pointer;
+}
+
 /*----- breakdown starts ----- */
 
 div.breakdownDiv {
